# dm-saymotion-api-python-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: workflow.yml
dm/: __init__.py
dm/saymotion/: __init__.py  async_client.py  client.py  error_codes.py  exceptions.py  utils.py
dm/saymotion/data/: __init__.py  callback.py  character.py  enums.py  job.py  job_status.py  params.py  response.py
examples/: async_basic_usage.py  async_batch_usage.py  async_render_job_usage.py  character_model_usage.py  rerun_job_usage.py  sync_basic_usage.py  sync_batch_usage.py  sync_render_job_usage.py
