[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dm-saymotion-api"
version = "1.0.0-rc"
description = "SayMotion REST API Python SDK"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "DeepMotion"}
]
keywords = ["saymotion", "text2motion", "deepmotion", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "requests>=2.28.0",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "types-requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/yaksea/dm-saymotion-api-python-sdk"
Documentation = "https://github.com/yaksea/dm-saymotion-api-python-sdk"
Repository = "https://github.com/yaksea/dm-saymotion-api-python-sdk"
Issues = "https://github.com/yaksea/dm-saymotion-api-python-sdk/issues"

[tool.setuptools]
packages = ["dm", "dm.saymotion", "dm.saymotion.data"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "aiohttp.*",
]
ignore_missing_imports = true

